--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.3.0/model-viewer.min.js"></script>
     <style>
         model-viewer {
-            width:500px;
-            height:500px;
+            width:90%;
+            height: 500px;
         }
     </style>
   </head>
@@ -18,12 +18,17 @@
         <h1>Welcome to My Website</h1>  
     </main>
     
-        <model-viewer alt="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum" 
-        src="https://modelviewer.dev/shared-assets/models/NeilArmstrong.glb" ar environment-image="https://modelviewer.dev/shared-assets/environments/moon_1k.hdr" poster="https://modelviewer.dev/shared-assets/models/NeilArmstrong.webp" shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
-        <model-viewer alt="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum" 
-        src="abajur.glb" ar poster="https://modelviewer.dev/shared-assets/models/NeilArmstrong.webp" camera-controls touch-action="pan-y"></model-viewer>
-    
-	
+        <model-viewer src="https://modelviewer.dev/assets/ShopifyModels/Chair.glb" ar shadow-intensity="1" camera-controls touch-action="pan-y">
+        <button slot="ar-button" id="ar-button">
+          Olhar no seu espaço!
+        </button>
+      </model-viewer>
+        <model-viewer src="abajur.glb" ar shadow-intensity="1" camera-controls touch-action="pan-y">
+        <button slot="ar-button" id="ar-button">
+          View in your space
+        </button>
+      </model-viewer>
+
   </body>
 </html>
 
